PA_1/src/decaf/frontend/Parser.output
   0  $accept : Program $end

   1  Program : ClassList

   2  ClassList : ClassList ClassDef
   3            | ClassDef

   4  VariableDef : Variable ';'

   5  Variable : Type IDENTIFIER

   6  Type : INT
   7       | COMPLEX
   8       | VOID
   9       | BOOL
  10       | STRING
  11       | CLASS IDENTIFIER
  12       | Type '[' ']'

  13  ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}'

  14  ExtendsClause : EXTENDS IDENTIFIER
  15                |

  16  FieldList : FieldList VariableDef
  17            | FieldList FunctionDef
  18            |

  19  Formals : VariableList
  20          |

  21  VariableList : VariableList ',' Variable
  22               | Variable

  23  FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock
  24              | Type IDENTIFIER '(' Formals ')' StmtBlock

  25  StmtBlock : '{' StmtList '}'

  26  StmtList : StmtList Stmt
  27           |

  28  Stmt : VariableDef
  29       | SimpleStmt ';'
  30       | IfStmt
  31       | DoStmt ';'
  32       | WhileStmt
  33       | ForStmt
  34       | ReturnStmt ';'
  35       | PrintStmt ';'
  36       | BreakStmt ';'
  37       | StmtBlock

  38  SimpleStmt : LValue '=' Expr
  39             | Call
  40             | Super
  41             |

  42  Receiver : Expr '.'
  43           |

  44  LValue : Receiver IDENTIFIER
  45         | Expr '[' Expr ']'

  46  Call : Receiver IDENTIFIER '(' Actuals ')'

  47  ACaseExpr : Constant ':' Expr ';'

  48  DefaultExpr : DEFULT ':' Expr ';'

  49  ACaseExprlist : ACaseExprlist ACaseExpr
  50                |

  51  Super : SUPER '.' IDENTIFIER '(' Actuals ')'

  52  Expr : LValue
  53       | Call
  54       | Super
  55       | Constant
  56       | CASE '(' Expr ')' '{' ACaseExprlist DefaultExpr '}'
  57       | Expr '+' Expr
  58       | Expr '-' Expr
  59       | Expr '*' Expr
  60       | Expr '/' Expr
  61       | Expr '%' Expr
  62       | Expr EQUAL Expr
  63       | Expr NOT_EQUAL Expr
  64       | Expr '<' Expr
  65       | Expr '>' Expr
  66       | Expr LESS_EQUAL Expr
  67       | Expr GREATER_EQUAL Expr
  68       | Expr AND Expr
  69       | Expr OR Expr
  70       | '(' Expr ')'
  71       | '-' Expr
  72       | '!' Expr
  73       | READ_INTEGER '(' ')'
  74       | READ_LINE '(' ')'
  75       | THIS
  76       | NEW IDENTIFIER '(' ')'
  77       | NEW Type '[' Expr ']'
  78       | INSTANCEOF '(' Expr ',' IDENTIFIER ')'
  79       | '(' CLASS IDENTIFIER ')' Expr
  80       | '@' Expr
  81       | '$' Expr
  82       | '#' Expr
  83       | DCOPY '(' Expr ')'
  84       | SCOPY '(' Expr ')'

  85  Constant : LITERAL
  86           | NULL

  87  Actuals : ExprList
  88          |

  89  ExprList : ExprList ',' Expr
  90           | Expr

  91  DoSubStmt : Expr ':' Stmt

  92  DoBranch : DoSubStmt DDD

  93  DoBranchlist : DoBranchlist DoBranch
  94               |

  95  DoStmt : DDO DoBranchlist DoSubStmt OOD

  96  WhileStmt : WHILE '(' Expr ')' Stmt

  97  ForStmt : FOR '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt

  98  BreakStmt : BREAK

  99  IfStmt : IF '(' Expr ')' Stmt ElseClause

 100  ElseClause : ELSE Stmt
 101             |

 102  ReturnStmt : RETURN Expr
 103             | RETURN

 104  PrintStmt : PRINT '(' ExprList ')'
 105            | PRINTCOMP '(' ExprList ')'

state 0
	$accept : . Program $end  (0)

	CLASS  shift 1
	.  error

	Program  goto 2
	ClassList  goto 3
	ClassDef  goto 4


state 1
	ClassDef : CLASS . IDENTIFIER ExtendsClause '{' FieldList '}'  (13)

	IDENTIFIER  shift 5
	.  error


state 2
	$accept : Program . $end  (0)

	$end  accept


state 3
	Program : ClassList .  (1)
	ClassList : ClassList . ClassDef  (2)

	CLASS  shift 1
	$end  reduce 1

	ClassDef  goto 6


state 4
	ClassList : ClassDef .  (3)

	.  reduce 3


state 5
	ClassDef : CLASS IDENTIFIER . ExtendsClause '{' FieldList '}'  (13)
	ExtendsClause : .  (15)

	EXTENDS  shift 7
	'{'  reduce 15

	ExtendsClause  goto 8


state 6
	ClassList : ClassList ClassDef .  (2)

	.  reduce 2


state 7
	ExtendsClause : EXTENDS . IDENTIFIER  (14)

	IDENTIFIER  shift 9
	.  error


state 8
	ClassDef : CLASS IDENTIFIER ExtendsClause . '{' FieldList '}'  (13)

	'{'  shift 10
	.  error


state 9
	ExtendsClause : EXTENDS IDENTIFIER .  (14)

	.  reduce 14


state 10
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' . FieldList '}'  (13)
	FieldList : .  (18)

	.  reduce 18

	FieldList  goto 11


state 11
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList . '}'  (13)
	FieldList : FieldList . VariableDef  (16)
	FieldList : FieldList . FunctionDef  (17)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	STATIC  shift 17
	'}'  shift 18
	COMPLEX  shift 19
	.  error

	VariableDef  goto 20
	Variable  goto 21
	Type  goto 22
	FunctionDef  goto 23


state 12
	Type : VOID .  (8)

	.  reduce 8


state 13
	Type : BOOL .  (9)

	.  reduce 9


state 14
	Type : INT .  (6)

	.  reduce 6


state 15
	Type : STRING .  (10)

	.  reduce 10


state 16
	Type : CLASS . IDENTIFIER  (11)

	IDENTIFIER  shift 24
	.  error


state 17
	FunctionDef : STATIC . Type IDENTIFIER '(' Formals ')' StmtBlock  (23)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	COMPLEX  shift 19
	.  error

	Type  goto 25


state 18
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}' .  (13)

	.  reduce 13


state 19
	Type : COMPLEX .  (7)

	.  reduce 7


state 20
	FieldList : FieldList VariableDef .  (16)

	.  reduce 16


state 21
	VariableDef : Variable . ';'  (4)

	';'  shift 26
	.  error


state 22
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (12)
	FunctionDef : Type . IDENTIFIER '(' Formals ')' StmtBlock  (24)

	IDENTIFIER  shift 27
	'['  shift 28
	.  error


state 23
	FieldList : FieldList FunctionDef .  (17)

	.  reduce 17


state 24
	Type : CLASS IDENTIFIER .  (11)

	.  reduce 11


state 25
	Type : Type . '[' ']'  (12)
	FunctionDef : STATIC Type . IDENTIFIER '(' Formals ')' StmtBlock  (23)

	IDENTIFIER  shift 29
	'['  shift 28
	.  error


state 26
	VariableDef : Variable ';' .  (4)

	.  reduce 4


state 27
	Variable : Type IDENTIFIER .  (5)
	FunctionDef : Type IDENTIFIER . '(' Formals ')' StmtBlock  (24)

	'('  shift 30
	';'  reduce 5


state 28
	Type : Type '[' . ']'  (12)

	']'  shift 31
	.  error


state 29
	FunctionDef : STATIC Type IDENTIFIER . '(' Formals ')' StmtBlock  (23)

	'('  shift 32
	.  error


state 30
	FunctionDef : Type IDENTIFIER '(' . Formals ')' StmtBlock  (24)
	Formals : .  (20)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	COMPLEX  shift 19
	')'  reduce 20

	Variable  goto 33
	Type  goto 34
	Formals  goto 35
	VariableList  goto 36


state 31
	Type : Type '[' ']' .  (12)

	.  reduce 12


state 32
	FunctionDef : STATIC Type IDENTIFIER '(' . Formals ')' StmtBlock  (23)
	Formals : .  (20)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	COMPLEX  shift 19
	')'  reduce 20

	Variable  goto 33
	Type  goto 34
	Formals  goto 37
	VariableList  goto 36


state 33
	VariableList : Variable .  (22)

	.  reduce 22


state 34
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (12)

	IDENTIFIER  shift 38
	'['  shift 28
	.  error


state 35
	FunctionDef : Type IDENTIFIER '(' Formals . ')' StmtBlock  (24)

	')'  shift 39
	.  error


state 36
	Formals : VariableList .  (19)
	VariableList : VariableList . ',' Variable  (21)

	','  shift 40
	')'  reduce 19


state 37
	FunctionDef : STATIC Type IDENTIFIER '(' Formals . ')' StmtBlock  (23)

	')'  shift 41
	.  error


state 38
	Variable : Type IDENTIFIER .  (5)

	.  reduce 5


state 39
	FunctionDef : Type IDENTIFIER '(' Formals ')' . StmtBlock  (24)

	'{'  shift 42
	.  error

	StmtBlock  goto 43


state 40
	VariableList : VariableList ',' . Variable  (21)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	COMPLEX  shift 19
	.  error

	Variable  goto 44
	Type  goto 34


state 41
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' . StmtBlock  (23)

	'{'  shift 42
	.  error

	StmtBlock  goto 45


state 42
	StmtBlock : '{' . StmtList '}'  (25)
	StmtList : .  (27)

	.  reduce 27

	StmtList  goto 46


state 43
	FunctionDef : Type IDENTIFIER '(' Formals ')' StmtBlock .  (24)

	.  reduce 24


state 44
	VariableList : VariableList ',' Variable .  (21)

	.  reduce 21


state 45
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock .  (23)

	.  reduce 23


state 46
	StmtBlock : '{' StmtList . '}'  (25)
	StmtList : StmtList . Stmt  (26)
	SimpleStmt : .  (41)
	Receiver : .  (43)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	NULL  shift 47
	THIS  shift 48
	WHILE  shift 49
	FOR  shift 50
	IF  shift 51
	RETURN  shift 52
	BREAK  shift 53
	NEW  shift 54
	PRINT  shift 55
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	'{'  shift 42
	'}'  shift 63
	COMPLEX  shift 19
	CASE  shift 64
	PRINTCOMP  shift 65
	SUPER  shift 66
	DCOPY  shift 67
	SCOPY  shift 68
	DDO  shift 69
	'@'  shift 70
	'$'  shift 71
	'#'  shift 72
	IDENTIFIER  reduce 43
	';'  reduce 41

	VariableDef  goto 73
	Variable  goto 21
	Type  goto 34
	StmtBlock  goto 74
	Stmt  goto 75
	SimpleStmt  goto 76
	IfStmt  goto 77
	DoStmt  goto 78
	WhileStmt  goto 79
	ForStmt  goto 80
	ReturnStmt  goto 81
	PrintStmt  goto 82
	BreakStmt  goto 83
	LValue  goto 84
	Expr  goto 85
	Call  goto 86
	Super  goto 87
	Receiver  goto 88
	Constant  goto 89


state 47
	Constant : NULL .  (86)

	.  reduce 86


state 48
	Expr : THIS .  (75)

	.  reduce 75


state 49
	WhileStmt : WHILE . '(' Expr ')' Stmt  (96)

	'('  shift 90
	.  error


state 50
	ForStmt : FOR . '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (97)

	'('  shift 91
	.  error


state 51
	IfStmt : IF . '(' Expr ')' Stmt ElseClause  (99)

	'('  shift 92
	.  error


state 52
	ReturnStmt : RETURN . Expr  (102)
	ReturnStmt : RETURN .  (103)
	Receiver : .  (43)

	NULL  shift 47
	THIS  shift 48
	NEW  shift 54
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	CASE  shift 64
	SUPER  shift 66
	DCOPY  shift 67
	SCOPY  shift 68
	'@'  shift 70
	'$'  shift 71
	'#'  shift 72
	IDENTIFIER  reduce 43
	';'  reduce 103

	LValue  goto 93
	Expr  goto 94
	Call  goto 95
	Super  goto 96
	Receiver  goto 88
	Constant  goto 89


state 53
	BreakStmt : BREAK .  (98)

	.  reduce 98


state 54
	Expr : NEW . IDENTIFIER '(' ')'  (76)
	Expr : NEW . Type '[' Expr ']'  (77)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	IDENTIFIER  shift 97
	COMPLEX  shift 19
	.  error

	Type  goto 98


state 55
	PrintStmt : PRINT . '(' ExprList ')'  (104)

	'('  shift 99
	.  error


state 56
	Expr : READ_INTEGER . '(' ')'  (73)

	'('  shift 100
	.  error


state 57
	Expr : READ_LINE . '(' ')'  (74)

	'('  shift 101
	.  error


state 58
	Constant : LITERAL .  (85)

	.  reduce 85


state 59
	Expr : INSTANCEOF . '(' Expr ',' IDENTIFIER ')'  (78)

	'('  shift 102
	.  error


state 60
	Expr : '-' . Expr  (71)
	Receiver : .  (43)

	NULL  shift 47
	THIS  shift 48
	NEW  shift 54
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	CASE  shift 64
	SUPER  shift 66
	DCOPY  shift 67
	SCOPY  shift 68
	'@'  shift 70
	'$'  shift 71
	'#'  shift 72
	IDENTIFIER  reduce 43

	LValue  goto 93
	Expr  goto 103
	Call  goto 95
	Super  goto 96
	Receiver  goto 88
	Constant  goto 89


state 61
	Expr : '!' . Expr  (72)
	Receiver : .  (43)

	NULL  shift 47
	THIS  shift 48
	NEW  shift 54
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	CASE  shift 64
	SUPER  shift 66
	DCOPY  shift 67
	SCOPY  shift 68
	'@'  shift 70
	'$'  shift 71
	'#'  shift 72
	IDENTIFIER  reduce 43

	LValue  goto 93
	Expr  goto 104
	Call  goto 95
	Super  goto 96
	Receiver  goto 88
	Constant  goto 89


state 62
	Expr : '(' . Expr ')'  (70)
	Expr : '(' . CLASS IDENTIFIER ')' Expr  (79)
	Receiver : .  (43)

	CLASS  shift 105
	NULL  shift 47
	THIS  shift 48
	NEW  shift 54
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	CASE  shift 64
	SUPER  shift 66
	DCOPY  shift 67
	SCOPY  shift 68
	'@'  shift 70
	'$'  shift 71
	'#'  shift 72
	IDENTIFIER  reduce 43

	LValue  goto 93
	Expr  goto 106
	Call  goto 95
	Super  goto 96
	Receiver  goto 88
	Constant  goto 89


state 63
	StmtBlock : '{' StmtList '}' .  (25)

	.  reduce 25


state 64
	Expr : CASE . '(' Expr ')' '{' ACaseExprlist DefaultExpr '}'  (56)

	'('  shift 107
	.  error


state 65
	PrintStmt : PRINTCOMP . '(' ExprList ')'  (105)

	'('  shift 108
	.  error


state 66
	Super : SUPER . '.' IDENTIFIER '(' Actuals ')'  (51)

	'.'  shift 109
	.  error


state 67
	Expr : DCOPY . '(' Expr ')'  (83)

	'('  shift 110
	.  error


state 68
	Expr : SCOPY . '(' Expr ')'  (84)

	'('  shift 111
	.  error


state 69
	DoStmt : DDO . DoBranchlist DoSubStmt OOD  (95)
	DoBranchlist : .  (94)

	.  reduce 94

	DoBranchlist  goto 112


state 70
	Expr : '@' . Expr  (80)
	Receiver : .  (43)

	NULL  shift 47
	THIS  shift 48
	NEW  shift 54
	READ_INTEGER  shift 56
	READ_LINE  shift 57
	LITERAL  shift 58
	INSTANCEOF  shift 59
	'-'  shift 60
	'!'  shift 61
	'('  shift 62
	CASE  shift 64
	SUPER  shift 66
	DCOPY  shift 67
	SCOPY  shift 68
	'@'  shift 70
	'$'  shift 71
	'#'  shift 72
	IDENTIFIER  reduce 43

	LValue  goto 93
	Expr  goto 113
	Call  goto 95
	Super  goto 96
	Receiver  goto 88
	Constant  goto 89


state 71
	Expr : '$' . Expr  (81)
	Receiver : .  (43)
